Fix banners on smaller screens

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -60,6 +60,12 @@
 		bottom: 0;
 		background: $color;
 	}
+
+	@media ( max-width: $width ) {
+		&:before {
+			left: 0;
+		}
+	}
 }
 
 @mixin sr-clip() {
